# hwareinfo

./: LICENSE  hwareinfo.cabal
src/: Main.hs
src/System/Hardware/: Info.hs
